--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "mantis-tsfm>=0.1.0",
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
     "scikit-learn>=1.7.0",
     "seaborn>=0.13.2",
+    "torch>=2.7.1",
+    "torchaudio>=2.7.1",
+    "torchvision>=0.22.1",
     "tqdm>=4.67.1",
     "xgboost>=3.0.2",
 ]
+
+[[tool.uv.index]]
+name = "pytorch-cu118"
+url = "https://download.pytorch.org/whl/cu118"
+explicit = true
